real-project/openvino/test-lambda/classification_results/non_compilable/test_34.cpp.log
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:10:5: error: use of undeclared identifier 'NewTest'
   10 |     NewTest();
      |     ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:12:5: error: use of undeclared identifier 'ConsistencyChecker'
   12 |     ConsistencyChecker();
      |     ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:16:5: error: use of undeclared identifier 'NewTest'
   16 |     NewTest();
      |     ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:18:5: error: use of undeclared identifier 'TransiveChecker'
   18 |     TransiveChecker();
      |     ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:22:5: error: use of undeclared identifier 'NewTest'
   22 |     NewTest();
      |     ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:24:5: error: use of undeclared identifier 'SymmetryChecker'
   24 |     SymmetryChecker();
      |     ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:28:5: error: use of undeclared identifier 'NewTest'
   28 |     NewTest();
      |     ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:30:5: error: use of undeclared identifier 'SymmetryChecker'
   30 |     SymmetryChecker();
      |     ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:34:5: error: use of undeclared identifier 'NewTest'
   34 |     NewTest();
      |     ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_34.cpp:36:5: error: use of undeclared identifier 'ReflexivityChecker'
   36 |     ReflexivityChecker();
      |     ^
10 errors generated.
